# ComputerVision_Hw

./: readme.md
Hw1/: CMakeLists.txt  main.cpp  readme.md
Hw3/: CMakeLists.txt  calib_result.txt  calibdata.txt  main.cpp  readme.md
Hw4_Photometric-Stereo/: .xdp_mesh.OC51A1  CMakeLists.txt  load_img.txt  main.cpp  normal_result.txt  readme.md
Hw4_Photometric-Stereo/Mesh/: export.ply
Hw4_Photometric-Stereo/homework_images/: light_directions.txt
Hw5/: CMakeLists.txt  main.cpp  readme.md
Hw5/matlab/: hw5.m
Hw6/: CMakeLists.txt  main.cpp  readme.md  skin_detector.cpp
